--- a/ios/Orderbook/Info.plist
+++ b/ios/Orderbook/Info.plist
@@ -71,6 +71,8 @@
 		<string>Jost-SemiBoldItalic.ttf</string>
 		<string>Jost-Thin.ttf</string>
 		<string>Jost-ThinItalic.ttf</string>
+		<string>RobotoMono-Bold.ttf</string>
+		<string>RobotoMono-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
