--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
+    "@types/lodash.throttle": "^4.1.6",
+    "lodash.throttle": "^4.1.1",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-config": "^1.4.4",
