--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
+    "eslint-plugin-unused-imports": "^1.1.5",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "~4.1.0"
   },
   "resolutions": {
     "@types/react": "^17"
